--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,7 +12,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">0dp</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:background">#F08C35</item>
+        <item name="android:background">@color/colorBtnNormal</item>
         <item name="android:layout_marginTop">5dp</item>
 
     </style>
